--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,3 +1,7 @@
 fixtures:
   symlinks:
     harden_windows_server: "#{source_dir}"
+  repositories:
+    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib"
+    local_security_policy: "https://github.com/ayohrling/local_security_policy"
+    registry: "https://github.com/puppetlabs/puppetlabs-registry"
