--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,7 @@
 fixtures:
   symlinks:
     harden_windows_server: "#{source_dir}"
-  repositories:
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib"
-    local_security_policy: "https://github.com/ayohrling/local_security_policy.git"
-    registry: "https://github.com/puppetlabs/puppetlabs-registry.git"
+  forge_modules:
+    stdlib: "puppetlabs/stdlib"
+    local_security_policy: "ayohrling/local_security_policy"
+    registry: "puppetlabs/registry"
