--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,15 +1,17 @@
 fixtures:
   symlinks:
     harden_windows_server: "#{source_dir}"
- repositories:
-   local_security_policy: "git://github.com/ayohrling/local_security_policy"
- forge_modules:
-   stdlib:
-     repo: "puppetlabs/stdlib"
-     ref: '4.20.0'
-   local_security_policy:
-     repo: "ayohrling/local_security_policy"
-     ref: '0.6.1'
-   registry:
-     repo: "puppetlabs/registry"
-     ref: '1.1.4'
+  repositories:
+    local_security_policy: "git://github.com/ayohrling/local_security_policy"
+  repositories:
+    registry: "git://github.com/puppetlabs/puppetlabs-registry"
+  forge_modules:
+    stdlib:
+      repo: "puppetlabs/stdlib"
+      ref: '4.20.0'
+    local_security_policy:
+      repo: "ayohrling/local_security_policy"
+      ref: '0.6.1'
+    registry:
+      repo: "puppetlabs/registry"
+      ref: '1.1.4'
