--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -5,6 +5,8 @@ fixtures:
     local_security_policy: "git://github.com/ayohrling/local_security_policy"
   repositories:
     registry: "git://github.com/puppetlabs/puppetlabs-registry"
+  repositories:
+    auditpol: "git://github.com/jonono/puppet-auditpol"
   forge_modules:
     stdlib:
       repo: "puppetlabs/stdlib"
