ignore paths rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,10 @@
 AllCops:
   Exclude:
     - 'spec/fixtures/**/*'
-    - 'pkg/*'
+    - 'bundle/**/*'
+    - 'vendor/**/*'
+    - 'pkg/**/*'
+    - 'spec/**/*'
 
 Style/Alias:
   Enabled: false
