--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,7 +34,7 @@ build: off
 test_script:
 - bundle exec puppet -V
 - ruby -v
-- bundle exec rspec spec/unit spec/integration -fd -b
+- bundle exec rspec spec/acceptance -fd -b
 notifications:
 - provider: Email
   to:
