--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,10 @@ init:
 environment:
   matrix:
   - PUPPET_GEM_VERSION: ~> 5.0
+    RUBY_VER: 25
+  - PUPPET_GEM_VERSION: ~> 5.0
+    RUBY_VER: 25-x64
+  - PUPPET_GEM_VERSION: ~> 5.0
     RUBY_VER: 24
   - PUPPET_GEM_VERSION: ~> 5.0
     RUBY_VER: 24-x64
