--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,6 +43,7 @@ test_script:
     puppet config print modulepath
     puppet module install puppetlabs-windows
     puppet module install autostructure-harden_windows_server
+    facter
     puppet apply -e "include ::harden_windows_server"
 notifications:
 - provider: Email
