--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,6 +31,7 @@ install:
     ruby -ropenssl -e 'puts \"OpenSSL Version - #{OpenSSL::OPENSSL_VERSION}\"; puts \"OpenSSL Library Version - #{OpenSSL::OPENSSL_LIBRARY_VERSION}\"'
 - bundle install --jobs 4 --retry 2 --without system_tests build
 - type Gemfile.lock
+- type nul > C:\ProgramData\PuppetLabs\puppet\etc\hiera.yaml
 build: off
 test_script:
 - bundle exec puppet -V
