--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,10 @@ install:
 - ps: |
     $msiPath = "$($env:USERPROFILE)\puppet-agent-5.4.0-x86.msi"
     (New-Object Net.WebClient).DownloadFile('https://downloads.puppetlabs.com/windows/puppet5/puppet-agent-5.4.0-x86.msi', $msiPath)
-    cmd /c start /wait msiexec /i $msiPath /q
+    cmd /c start /wait msiexec /i $msiPath /q /L* c:\install-puppet.log
+    Get-Content -Path c:\install-puppet.log
+    Get-ChildItem -Path "C:\Program Files"
+    Get-ChildItem -Path "C:\Program Files\Puppet Labs"
     Get-ChildItem -Path "C:\Program Files\Puppet Labs\Puppet"
     puppet config print config
     puppet config print modulepath
