appveyor: fix PATH

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ matrix:
   fast_finish: true
 
 install:
-- SET PATH=C:\Program Files\Puppet Labs\Puppet;C:\Ruby%RUBY_VER%\bin;%PATH%
+- SET PATH=C:\Program Files\Puppet Labs\Puppet\bin;C:\Ruby%RUBY_VER%\bin;%PATH%
 - ps: |
     $msiPath = "$($env:USERPROFILE)\puppet-agent-5.4.0-x64.msi"
     (New-Object Net.WebClient).DownloadFile('https://downloads.puppetlabs.com/windows/puppet5/puppet-agent-5.4.0-x64.msi', $msiPath)
